--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_footer.html
@@ -1,7 +1,7 @@
 {% from "kjaymiller_com/components/social-cards.html" import add_social_card with context %}
 <hr class="mt-4 "/>
-<footer role="contentinfo" class="grid grid-cols-3 bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
-  <div id="footer-column-1" class= md:mx-auto text-small">
+<footer role="contentinfo" class="lg:grid lg:grid-cols-3 grid-flow-col bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4">
+  <div id="footer-column-1" class="text-small">
     <p>{{SITE_URL}}</p>
     <p>Website Created with <a href="https://github.com/render-engine/render-engine">Render Engine</a> and <a
                             class="hover:underline" href="https://github.com/kjaymiller/render_engine_theme_kjaymiller">kjaymiller theme</a>
