make header show by default

--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
@@ -17,7 +17,7 @@
     </h1>
     <button onclick="toggleMenu()" class="my-4"><i class="fa-solid fa-bars"></i></button>
   </div>
-    <div id="header-menu" class="p-2 flex flex-wrap justify-around" style="display: none;">
+    <div id="header-menu" class="p-2 flex flex-wrap justify-around" >
     {% for link in NAVIGATION %}
       <a class="
             rounded-lg
