removes unused templates and calls _base

--- a/src/render_engine_theme_kjaymiller/templates/blog_list.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog_list.html
@@ -3,6 +3,6 @@
 {% block content %}
   <div class="container mx-auto">
     <h2 class="mt-8 title text-2xl font-semibold">{{title}}</h2>
-    {% include '_archive.html' %}
+    {% include 'kjaymiller_com/components/_archive.html' %}
   </div>
 {% endblock %}
