--- a/src/render_engine_theme_kjaymiller/templates/contact.html
+++ b/src/render_engine_theme_kjaymiller/templates/contact.html
@@ -1,5 +1,5 @@
 {% from 'kjaymiller_com/components/social-cards.html' import social_cards with context %}
-{% extends 'base.html' %}
+{% extends 'kjaymiller_com/components/base.html' %}
 {% block content %}
 <div class="border my-5 p-3 shadow-lg">
     <h2 class="text-2xl text-purple-700 my-2">Email Me</h2>
