--- a/src/render_engine_theme_kjaymiller/templates/page.html
+++ b/src/render_engine_theme_kjaymiller/templates/page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'kjaymiller_com/components/_base.html' %}
 {% block title %}{{title}}{% endblock%}
 {% block content %}
 <section>
