removes unused templates and calls _base

--- a/src/render_engine_theme_kjaymiller/templates/blog.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog.html
@@ -2,7 +2,7 @@
 {% block head %}
   <!-- Meta Card Tags-->
   {{super()}}
-  {% include "_og_card.html" %}
+  {% include "kjaymiller_com/components/_og_card.html" %}
 {% endblock %}
 {% block content %} 
   <div class="container mx-auto">
