updates the target in "more from secondary target"

--- a/src/render_engine_theme_kjaymiller/templates/index.html
+++ b/src/render_engine_theme_kjaymiller/templates/index.html
@@ -31,7 +31,7 @@
     {% endif %}
   {% endif %}
   <div class="text-right">
-    <p><a class="underline hover:text-{{theme.colors.main}}" href="{{secondary.targer}}">More from {{secondary.title}}</a></p>
+    <p><a class="underline hover:text-{{theme.colors.main}}" href="{{secondary.target}}">More from {{secondary.title}}</a></p>
   </div>
   </section>
   {% if other %}
