--- a/src/render_engine_theme_kjaymiller/templates/index.html
+++ b/src/render_engine_theme_kjaymiller/templates/index.html
@@ -29,11 +29,11 @@
     {% else %}
       {{secondary.content}}
     {% endif %}
-  {% endif %}
   <div class="text-right">
-    <p><a class="underline hover:text-{{theme.colors.main}}" href="{{secondary.target}}">More from {{secondary.title}}</a></p>
+    <p><a class="underline hover:text-{{COLOR_MAIN}}" href="{{secondary.target}}">More from {{secondary.title}}</a></p>
   </div>
   </section>
+  {% endif %}
   {% if other %}
 <section class="container">
     {% if other.target %}
