--- a/src/render_engine_theme_kjaymiller/templates/blog.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %} 
   <div class="container mx-auto">
-  <article class="tracking-wide prose dark:prose-invert prose-slate">
+  <article class="tracking-wide prose lg:prose-xl dark:prose-invert prose-slate">
     {% if image is defined %}
       <div class="feature-image overflow-hidden">
         <img src="{{image}}" class="max-h-72 rounded-lg shadow">
