--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_base.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_base.html
@@ -2,7 +2,7 @@
 {% block header %}
   {% include "kjaymiller_com/components/_header.html" %}
 {% endblock %}
-<div class="container mx-auto">
+<div class="container mx-auto px-2">
 {% block content %}
 {% endblock %}
 </div>
