--- a/src/render_engine_theme_kjaymiller/templates/page.html
+++ b/src/render_engine_theme_kjaymiller/templates/page.html
@@ -1,7 +1,7 @@
 {% extends 'kjaymiller_com/components/_base.html' %}
 {% block title %}{{title}}{% endblock%}
 {% block content %}
-<section>
+<section class="container mx-auto">
     {% include "components/page_title.html" %}
 <article class="prose lg:prose-xl dark:prose-invert prose-slate">
     {{content}}
