add new content_body block

--- a/src/render_engine_theme_kjaymiller/templates/blog_list.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog_list.html
@@ -1,6 +1,6 @@
 {% extends 'kjaymiller_com/components/_base.html' %}
 {% block title %}{{title}}{% endblock %}
-{% block content %}
+{% block content_body %}
   <div class="container mx-auto">
     <h2 class="mt-8 title text-2xl font-semibold">{{title}}</h2>
     {% include 'kjaymiller_com/components/_archive.html' %}
