--- a/src/render_engine_theme_kjaymiller/templates/blog.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog.html
@@ -4,9 +4,8 @@
   {{super()}}
   {% include "kjaymiller_com/components/_og_card.html" %}
 {% endblock %}
-{% block content %} 
-  <div class="container mx-auto">
-  <article class="tracking-wide prose lg:prose-xl dark:prose-invert prose-slate">
+{% block content_body %} 
+  <article class="tracking-wide prose dark:prose-invert prose-slate">
     {% if image is defined %}
       <div class="feature-image overflow-hidden">
         <img src="{{image}}" class="max-h-72 rounded-lg shadow">
@@ -36,5 +35,4 @@
       <a href="/blog/blog1.html" class="subtitle is-5 text-link hover:underline font-bold">Back to
         Blogs...</a>
     </section>
-  </div>
 {% endblock %}
