--- a/src/render_engine_theme_kjaymiller/static/css/tailwind.css
+++ b/src/render_engine_theme_kjaymiller/static/css/tailwind.css
@@ -1,11 +1,29 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities; 
+@import "tailwindcss";
+@plugin '@tailwindcss/typography';
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 aside.admonition {
-    @apply rounded bg-slate-100 dark:bg-slate-600 text-stone-800 dark:text-stone-200 p-3
+  @apply rounded-sm bg-slate-100 dark:bg-slate-600 text-stone-800 dark:text-stone-200 p-3;
 }
 
 .prose > a {
-    @apply underline
+  @apply underline;
 }
+
