--- a/src/render_engine_theme_kjaymiller/templates/blog.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog.html
@@ -5,7 +5,7 @@
   {% include "kjaymiller_com/components/_og_card.html" %}
 {% endblock %}
 {% block content_body %} 
-  <article class="tracking-wide prose md:prose-lg lg:prose-xl dark:prose-invert prose-slate">
+  <article class="tracking-wide prose md:prose-lg lg:prose-lg dark:prose-invert prose-slate">
     {% if image is defined %}
       <div class="feature-image overflow-hidden">
         <img src="{{image}}" class="max-h-72 rounded-lg shadow">
