--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
@@ -19,16 +19,27 @@
   </div>
   <div id="header-menu" class="p-2 flex flex-wrap justify-around">
     {% for link in NAVIGATION %}
-    <a
-      class="rounded-lg hover:bg-gray-100 opacity-75 hover:opacity-100 hover:text-indigo-800 font-semibold text-xl hover:font-semibold text-slate-200 no-underline"
-      href="{{link.url}}"
-      aria-label="{{link.text}}"
-    >
-      {% if link.icon is defined %}
-      <i class="{{link.icon}}" aria-hidden="true" title="{{link.text}}"></i>
-      {% endif %} {{link.text}}
-    </a>
-    {% endfor %}
+      <span class="p-2">
+        <a class="
+              rounded-lg
+              hover:bg-gray-100
+              opacity-75
+              hover:opacity-100
+              hover:text-indigo-800
+              font-semibold
+              text-xl
+              hover:font-semibold
+              text-slate-200
+              no-underline
+            " href="{{link.url}}"
+            aria-label="{{link.text}}">
+            {% if link.icon is defined %}
+            <i class="{{link.icon}}" aria-hidden="true" title="{{link.text}}"></i>
+            {% endif %}
+            {{link.text}}
+        </a>
+      </span>
+      {% endfor %}
   </div>
 </nav>
 <script type="text/javascript">
