--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
@@ -19,16 +19,17 @@
   </div>
   <div id="header-menu" class="p-2 flex flex-wrap justify-around">
     {% for link in NAVIGATION %}
-      <span class="p-2">
-        <a class="
-              rounded-lg
+      <span class="p-2
               hover:bg-gray-100
               opacity-75
               hover:opacity-100
-              hover:text-indigo-800
-              font-semibold
-              text-xl
               hover:font-semibold
+              "
+            > 
+        <a class="
+              font-semibold
+              text-lg
+              hover:text-indigo-800
               text-slate-200
               no-underline
             " href="{{link.url}}"
