minor update text color

--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
@@ -24,6 +24,7 @@
               opacity-75
               hover:opacity-100
               hover:font-semibold
+              hover:text-indigo-800
               "
             > 
         <a class="
