--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/_header.html
@@ -20,7 +20,6 @@
   <div id="header-menu" class="p-2 flex flex-wrap justify-around">
     {% for link in NAVIGATION %}
       <span class="p-2
-              hover:bg-gray-100
               opacity-75
               hover:opacity-100
               hover:font-semibold
@@ -33,6 +32,7 @@
               hover:text-indigo-800
               text-slate-200
               no-underline
+              hover:underline
             " href="{{link.url}}"
             aria-label="{{link.text}}">
             {% if link.icon is defined %}
